--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
-  </head>
-  <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/common.css">
+  <style>
+    .slbBackdrop {
+      background-color: rgba(0, 0, 0, .5) !important
+    }
+  </style>
+</head>
+
+<body>
+  <div class="search">
     <form class="search-form" id="search-form">
-      <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
-      <button type="submit">Search</button>
+      <div>
+        <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images...">
+        <button type="submit">Search</button>
+      </div>
     </form>
-  </body>
+  </div>
+  <div class="gallery"></div>
+  <button type="button" class="is-hiden load-more">Load more</button>
+</body>
+
+<script type="module" src="./js/index.js"></script>
+
 </html>
